# sbetr

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README  README.md  commit-message-template.txt
src/Applications/: ApplicationsFactory.F90  CMakeLists.txt  readme.md
src/Applications/app_util/: ApplicationsFactory.F90  CMakeLists.txt  readme.md
src/Applications/soil-farm/: CENT_ECACNP  CENT_ECADCNP  CMakeLists.txt  README.md  bgcfarm_util
src/Applications/soil-farm/CENT_ECACNP/: BgcCentCnpCompetType.F90  BgcCentCnpDecompType.F90  BgcCentCnpForcType.F90  BgcCentCnpIndexType.F90  BgcCentCnpNitDenType.F90  BgcCentCnpSOMType.F90  BgcCentCnpType.F90  BgcReactionsCentECACnpType.F90  CMakeLists.txt  PlantSoilBgcCnpType.F90
src/Applications/soil-farm/SUMMS/: CMakeLists.txt
src/Applications/soil-farm/bgcfarm_util/: BeTRJarModel.F90  BgcConSummsType.f90  BiogeoConType.F90  readme.md  (+6 more)
src/betr/betr_core/: BGCReactionsMod.F90  BeTRTracerType.F90  BeTR_CanopyStateType.F90  BeTR_CarbonFluxType.F90  BeTR_ChemStateType.F90  BeTR_SoilHydrologyType.F90  BeTR_SoilStateType.F90  BeTR_TemperatureType.F90  BeTR_WaterFluxType.F90  BeTR_WaterStateType.F90  BeTR_aerocondType.F90  BeTR_pftvarconType.F90  CMakeLists.txt  KineticsMod.F90  PlantSoilBGCMod.F90  TracerBaseType.F90  TracerBoundaryCondType.F90  TracerCoeffType.F90  TracerFluxType.F90  TracerParamsMod.F90  TracerStateType.F90  Tracer_varcon.F90  TransportMod.F90  readme.md
src/betr/betr_dtype/: BeTR_CNStateType.F90  BeTR_CanopyStateType.F90  BeTR_CarbonFluxType.F90  BeTR_ChemStateType.F90  BeTR_EcophysConType.F90  BeTR_SoilStateType.F90  BeTR_TemperatureType.F90  BeTR_WaterFluxType.F90  BeTR_WaterStateType.F90  BeTR_aerocondType.F90  BeTR_atm2lndType.F90  BeTR_biogeoFluxType.F90  BeTR_biogeoStateType.F90  BeTR_biogeophysInputType.F90  BeTR_carbonfluxRecvType.F90  BeTR_carbonfluxType.F90  BeTR_carbonstateRecvType.F90  BeTR_nitrogenfluxRecvType.F90  BeTR_nitrogenfluxType.F90  BeTR_nitrogenstateRecvType.F90  BeTR_phosphorusfluxRecvType.F90  BeTR_phosphorusfluxType.F90  BeTR_phosphorusstateRecvType.F90  CMakeLists.txt  readme.md
src/betr/betr_echem/: CMakeLists.txt  eChemConstMod.F90  eChemMod.F90  readme.md
src/betr/betr_main/: BGCReactionsMod.F90  BeTRType.F90  BetrBGCMod.F90  CMakeLists.txt  PlantSoilBGCMod.F90  TracerBalanceMod.F90  betr_initializeMod.F90  betr_instMod.F90  readme.md
src/betr/betr_math/: BTridiagonalMod.F90  CMakeLists.txt  FindRootMod.F90  InterpolationMod.F90  KineticsMod.F90  LinearAlgebraMod.F90  MathfuncMod.F90  ODEMod.F90  SparseMatMod.F90  func_data_type_mod.F90  readme.md
src/betr/betr_standalone_coupler/: CMakeLists.txt  betr_standalone_cpl.F90
src/betr/betr_util/: BeTR_decompMod.F90  BetrStatusType.F90  CMakeLists.txt  Tracer_varcon.F90  UnitConverMod.F90  UnitConvertMod.F90  babortutils.F90  betr_constants.F90  betr_ctrl.F90  betr_regression_mod.F90  betr_time_manager.F90  betr_time_mod.F90  betr_utils.F90  betr_varcon.F90  bshr_alloc.h  bshr_assert.h  bshr_assert_mod.F90  bshr_assign.h  bshr_const_mod.F90  bshr_infnan_mod.F90  bshr_kind_mod.F90  bshr_log_mod.F90  bshr_mpi_mod.F90  bshr_nl_mod.F90  bshr_string_mod.F90  bshr_sys_mod.F90  bshr_timer_mod.F90  gbetrType.F90  listMod.F90  readme.md
src/driver/: BGCReactionsMockRunType.F90  BeTRSimulation.F90  BeTRSimulationALM.F90  BeTRSimulationCLM.F90  BeTRSimulationFactory.F90  BeTRSimulationStandalone.F90  BeTRType.F90  CLMForcType.F90  CMakeLists.txt  ForcingDataType.F90  GridMod.F90  PlantSoilBGCMockRunType.F90  ReactionsFactory.F90  ReactionsFactoryStandalone.F90  bhistFileMod.F90  readme.md  sbetr.F90  sbetrDriverMod.F90
src/driver/alm/: ALMbetrNLMod.F90  BeTRSimulationALM.F90  CMakeLists.txt  calibrationType.F90  readme.md
src/driver/clm/: BeTRSimulationCLM.F90  CMakeLists.txt  readme.md
src/driver/elm/: BeTRSimulationELM.F90  CMakeLists.txt  ELMbetrNLMod.F90
src/driver/emi/: ALMbetrNLMod.F90  EMIBeTRSimulation.F90
src/driver/main/: BeTRSimulationFactory.F90  CMakeLists.txt  HistBGCMod.F90  mathtest.F90  readme.md  sbetr.F90  sbetrDriverMod.F90
src/driver/shared/: BeTRSimulation.F90  BeTRType.F90  CMakeLists.txt  bhistFileMod.F90  bncdio_pio.F90  readme.md
src/driver/standalone/: BeTRSimulationStandalone.F90  CMakeLists.txt  ForcingDataType.F90  GridMod.F90  readme.md
src/io_util/: CMakeLists.txt  histMod.F90  ncdio_pio.F90  readme.md
src/jarmodel/driver/: CMakeLists.txt  JarModelFactory.F90  jarmodel.F90  readme.md
src/jarmodel/forcing/: AtmForcType.F90  CMakeLists.txt  ForcDataType.F90  NutForcType.F90  OMForcType.F90  SetJarForcMod.F90  SoilForcType.F90  analforc.F90  readme.md
src/jarmodel/test/: CMakeLists.txt  iotest.F90  readme.md  readparatest.F90
src/math_test/mathtest/: CMakeLists.txt  mathtest.F90  readme.md
src/math_test/robertson/: CMakeLists.txt  readme.md  robertson.F90  robertsonMod.F90
src/sclm/main/: CMakeLists.txt  CNDecompCascadeConType.F90  ColumnType.F90  SoilStateType.F90  TemperatureType.F90  column_varcon.F90  soilorder_varcon.F90  subgridAveMod.F90
src/shr/: CMakeLists.txt  abortutils.F90  mpif.h  readme.md  shr_assert_mod.F90  shr_infnan_mod.F90  shr_string_mod.F90  shr_sys_mod.F90
src/stub_clm/: CMakeLists.txt  CNCarbonFluxType.F90  CNCarbonStateType.F90  CNDecompCascadeConType.F90  CNNitrogenFluxType.F90  CNNitrogenStateType.F90  CNStateType.F90  CanopyStateType.F90  ColumnType.F90  EcophysConType.F90  FuncPedotransferMod.F90  GridcellType.F90  LandunitType.F90  PatchType.F90  PfCarbonFluxType.F90  PfNitrogenFluxType.F90  PfNitrogenStateType.F90  PfPhosphorusFluxType.F90  PfPhosphorusStateType.F90  PfTemperatureType.F90  PfWaterFluxType.F90  PhosphorusFluxType.F90  PhosphorusStateType.F90  PlantMicKineticsMod.F90  QSatMod.F90  SoilHydrologyType.F90  SoilStateType.F90  SoilWaterRetentionCurveFactoryMod.F90  SurfaceResistanceMod.F90  TemperatureType.F90  TridiagonalMod.F90  WaterFluxType.F90  WaterStateType.F90  accumulMod.F90  atm2lndType.F90  clm_instMod.F90  clm_varcon.F90  clm_varpar.F90  column_varcon.F90  elm_initializeMod.F90  (+16 more)
src/util_share/: CMakeLists.txt
(+520 files in other folders)
